styles/main.css
/* ... */
@media (max-width: 507px) {
    .work-list li {
        -moz-box-sizing: border-box;
        -webkit-box-sizing: border-box;
        box-sizing: border-box;
        width: 100%;
    }

    a.screenshot, a.screenshot:visited {
        background-size: 270px 203px;
        height: 203px;
        width: 270px;
    }

    .sincerely-ink { background-image: url('/images/work/ink_mobile.png'); }
    .zappos-iphone { background-image: url('/images/work/zappos_iphone_mobile.png'); }
    .postagram { background-image: url('/images/work/postagram_iphone_mobile.png'); }
    .sincerely-ship { background-image: url('/images/work/sincerely_ship_mobile.png'); }
    .zappos-ipad { background-image: url('/images/work/zappos_ipad_mobile.png'); }
    .accuweather-quick { background-image: url('/images/work/quick_iphone_mobile.png'); }
    .popbooth { background-image: url('/images/work/popbooth_ios_mobile.png'); }
    .accuweather-ipad { background-image: url('/images/work/accuweather_ipad_mobile.png'); }
    .trackthepack { background-image: url('/images/work/trackthepack_iphone_mobile.png'); }
    .mlbtr { background-image: url('/images/work/mlbtr_iphone_mobile.png'); }
    .accuweather-iphone { background-image: url('/images/work/accuweather_iphone_mobile.png'); }
}

@media (max-width: 507px) and (-webkit-min-device-pixel-ratio: 1.5), (max-width: 507px) and (min-resolution: 144dpi) {
    .sincerely-ink { background-image: url('/images/work/ink_mobile@2x.png'); }
    .zappos-iphone { background-image: url('/images/work/zappos_iphone_mobile@2x.png'); }
    .postagram { background-image: url('/images/work/postagram_iphone_mobile@2x.png'); }
    .sincerely-ship { background-image: url('/images/work/sincerely_ship_mobile@2x.png'); }
    .zappos-ipad { background-image: url('/images/work/zappos_ipad_mobile@2x.png'); }
    .accuweather-quick { background-image: url('/images/work/quick_iphone_mobile@2x.png'); }
    .popbooth { background-image: url('/images/work/popbooth_ios_mobile@2x.png'); }
    .accuweather-ipad { background-image: url('/images/work/accuweather_ipad_mobile@2x.png'); }
    .trackthepack { background-image: url('/images/work/trackthepack_iphone_mobile@2x.png'); }
    .mlbtr { background-image: url('/images/work/mlbtr_iphone_mobile@2x.png'); }
    .accuweather-iphone { background-image: url('/images/work/accuweather_iphone_mobile@2x.png'); }
}

/* Pygments */

pre {
    background: #f7f5f5;
    border: 1px solid #e2e2e2;
    border-radius: 6px;
    -webkit-border-radius: 6px;
    -moz-border-radius: 6px;
    -ms-border-radius: 6px;
    -o-border-radius: 6px;
    margin-bottom: 30px;
    padding: 15px 20px;
}

pre.code-no-margin {
    margin-bottom: 10px;
}

code {
    font-family: Menlo, monospace;
    -webkit-font-smoothing: subpixel-antialiased;
}

.highlight code {
    font-size: 12px;
    line-height: 16px;
}

p code {
    background: #f0eded;
    font-size: 14px;
    padding: 5px 5px;
}

.hll {  }
.c { color: #999988; font-style: italic } /* Comment */
.err { border: 1px solid #a61717 } /* Error */
.k { font-weight: bold; } /* Keyword */
.o { } /* Operator */
.cm { color: #999988; font-style: italic } /* Comment.Multiline */
.cp { color: #999999 } /* Comment.Preproc */
.c1 { color: #999988; font-style: italic } /* Comment.Single */
.cs { color: #999999; font-style: italic } /* Comment.Special */
.gd { color: #000000 } /* Generic.Deleted */
.ge { font-style: italic } /* Generic.Emph */
.gr { color: #aa0000 } /* Generic.Error */
.gh { color: #999999; } /* Generic.Heading */
.gi { color: #000000 } /* Generic.Inserted */
.go { color: #888888 } /* Generic.Output */
.gp { color: #555555; font-weight: bold } /* Generic.Prompt */
.gs { font-weight: bold } /* Generic.Strong */
.gu { color: #800080; font-weight: bold } /* Generic.Subheading */
.gt { color: #aa0000 } /* Generic.Traceback */
.kc { font-weight: bold; } /* Keyword.Constant */
.kd { font-weight: bold; } /* Keyword.Declaration */
.kn { font-weight: bold; } /* Keyword.Namespace */
.kp { font-weight: bold; } /* Keyword.Pseudo */
.kr { font-weight: bold; } /* Keyword.Reserved */
.kt { color: 445588; font-weight: bold; } /* Keyword.Type */
.m { color: #009999 } /* Literal.Number */
.s { color: #d14 } /* Literal.String */
.na { color: #008080 } /* Name.Attribute */
.nb { color: #0086B3 } /* Name.Builtin */
.nc { color: #445588; } /* Name.Class */
.no { color: #008080 } /* Name.Constant */
.nd { color: #AA22FF } /* Name.Decorator */
.ni { color: #800080; } /* Name.Entity */
.ne { color: #990000; } /* Name.Exception */
.nf { color: #990000 } /* Name.Function */
.nl { color: #A0A000 } /* Name.Label */
.nn { color: #555555; } /* Name.Namespace */
.nt { color: #000080; } /* Name.Tag */
.nv { color: #008080 } /* Name.Variable */
.ow { color: #AA22FF; } /* Operator.Word */
.w { color: #bbbbbb } /* Text.Whitespace */
.mf { color: #009999 } /* Literal.Number.Float */
.mh { color: #009999 } /* Literal.Number.Hex */
.mi { color: #009999 } /* Literal.Number.Integer */
.mo { color: #009999 } /* Literal.Number.Oct */
.sb { color: #d14 } /* Literal.String.Backtick */
.sc { color: #d14 } /* Literal.String.Char */
.sd { color: #d14; font-style: italic } /* Literal.String.Doc */
.s2 { color: #d14 } /* Literal.String.Double */
.se { color: #d14; font-weight: bold } /* Literal.String.Escape */
.sh { color: #d14 } /* Literal.String.Heredoc */
.si { color: #d14; font-weight: bold } /* Literal.String.Interpol */
.sx { color: #d14 } /* Literal.String.Other */
.sr { color: #009926 } /* Literal.String.Regex */
.s1 { color: #d14 } /* Literal.String.Single */
.ss { color: #990073 } /* Literal.String.Symbol */
.bp { color: #999999 } /* Name.Builtin.Pseudo */
.vc { color: #008080 } /* Name.Variable.Class */
.vg { color: #008080 } /* Name.Variable.Global */
.vi { color: #008080 } /* Name.Variable.Instance */
.il { color: #009999 } /* Literal.Number.Integer.Long */
/* ... */

